# win_notify_python

./: .gitignore  README.md  app.spec  pyproject.toml
src/: config.json  main.py
